# zero-to-production-rust

./: Cargo.toml  README.md
.github/workflows/: audit.yml  general.yml
migrations/: 20240415002615_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
