[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.6.0"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = "0.12.3"
serde = { version = "1.0.197", features = ["derive"] }
config = "0.14.0"
uuid = { version = "1.8.0", features = ["v4"] }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]